# examples

./: .gitignore  .gitmodules  Dockerfile  README.md  docker-compose.yml  requirements.txt
.github/workflows/: format.yml  release.yml  tests.yml
docker/: base.dockerfile  build.dockerfile  run.dockerfile
func/: CMakeLists.txt
func/ffmpeg/: CMakeLists.txt
func/jwt/: CMakeLists.txt  test.cpp
func/lammps/: CMakeLists.txt  chain.cpp
func/mpi/: CMakeLists.txt
func/opencv/: CMakeLists.txt  check.cpp  pca.cpp
func/rabe/: CMakeLists.txt  test.cpp
func/tf/: CMakeLists.txt  check.cpp  stb_image_resize2.h
func/tflite/: CMakeLists.txt  image.cpp
tasks/: __init__.py  cli.py  data.py  docker.py  env.py  ffmpeg.py  format_code.py  func.py  git.py  grass.py  imagemagick.py  jwt.py  kernels.py  lammps.py  libpng.py  lulesh.py  opencv.py  polybench.py  rabe.py  tensorflow.py  util.py  wasm.py
